fixed bug - due "will-change: transform, opacity;" appears additional whitespace between menu items

--- a/assets/src/styles/layout/_header.scss
+++ b/assets/src/styles/layout/_header.scss
@@ -160,8 +160,7 @@
             transform: translate(-100%, 0%);
             opacity: 0;
             animation: menu-link-show 0.2s forwards;
-            will-change: transform,
-            opacity;
+            // will-change: transform, opacity;   - НЕ СТАВИТЬ!! - вызывает глюк - доп.расстояние между элементами
 
             // задал задержку срабатывания анимации для разных пунктов меню через JS
             // &:nth-child(2) {
@@ -176,7 +175,7 @@
                 width: 33.33vw;
                 max-width: 40rem;
                 transform: translate(0%, 200%);
-                will-change: transform, opacity;
+                // will-change: transform, opacity;  - НЕ СТАВИТЬ!! - вызывает глюк - доп.расстояние между элементами
                 opacity: 0;
             }
         }
@@ -292,7 +291,7 @@
             opacity: 0;
             // анимация вылетания
             animation: menu-link-show 0.3s forwards;
-            will-change: transform, opacity;
+            //will-change: transform, opacity; - НЕ СТАВИТЬ!! - вызывает глюк - доп.расстояние между элементами
 
             border-bottom: 0.1rem solid darken($color: $borderColor, $amount: 15%);
 
